kubernetes/applications/matplan/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matplan-api
  namespace: matplan
spec:
  selector:
    app.kubernetes.io/name: matplan-api
  ports:
    - name: http
      port: 8080
      targetPort: http
