kubernetes/applications/matplan/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matplan-frontend
  namespace: matplan
spec:
  selector:
    app.kubernetes.io/name: matplan-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
