kubernetes/applications/matplan/piper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matplan-piper
  namespace: matplan
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app.kubernetes.io/name: matplan-piper
  ports:
    - name: http
      port: 5000
      targetPort: http
